<resources>
    <string name="app_name">RemoteControl0</string>

    <string-array name="tags">
        <item name="tag_caps">capslock</item>
        <item name="tag_shift">shift</item>
        <item name="tag_f1">f1</item>
        <item name="tag_f2">f2</item>
        <item name="tag_f3">f3</item>
        <item name="tag_f4">f4</item>
        <item name="tag_f5">f5</item>
        <item name="tag_f6">f6</item>
        <item name="tag_f7">f7</item>
        <item name="tag_f8">f8</item>
        <item name="tag_f9">f9</item>
        <item name="tag_f10">f10</item>
        <item name="tag_f11">f11</item>
        <item name="tag_f12">f12</item>
        <item name="tag_enter">enter</item>
        <item name="tag_menu">menu</item>
        <item name="tag_ctrl">ctrl</item>
        <item name="tag_alt">alt</item>
        <item name="tag_win">windows</item>
        <item name="tag_copy">copy</item>
        <item name="tag_paste">paste</item>
        <item name="tag_space">space</item>
        <item name="tag_task_manager">tskmgr</item>
        <item name="tag_backspace">backspace</item>
        <item name="tag_down">down</item>
        <item name="tag_up">up</item>
        <item name="tag_right">right</item>
        <item name="tag_left">left</item>
        <item name="tag_alt_f4">alt-f4</item>
        <item name="win_d">win-d</item>
        <item name="tag_alt_tab">alt-tab</item>
        <item name="tag_esc">esc</item>
        <item name="tag_tab">tab</item>
        <item name="tag_play_pause">plps</item>

    </string-array>
    <!--    KEYS-->
    <string name="tag_caps">capslock</string>
    <string name="tag_shift">shift</string>
    <string name="tag_f1">f1</string>
    <string name="tag_f2">f2</string>
    <string name="tag_f3">f3</string>
    <string name="tag_f4">f4</string>
    <string name="tag_f5">f5</string>
    <string name="tag_f6">f6</string>
    <string name="tag_f7">f7</string>
    <string name="tag_f8">f8</string>
    <string name="tag_f9">f9</string>
    <string name="tag_f10">f10</string>
    <string name="tag_f11">f11</string>
    <string name="tag_f12">f12</string>
    <string name="tag_enter">enter</string>
    <string name="tag_menu">menu</string>
    <string name="tag_ctrl">ctrl</string>
    <string name="tag_alt">alt</string>
    <string name="tag_win">windows</string>
    <string name="tag_copy">copy</string>
    <string name="tag_paste">paste</string>
    <string name="tag_space">space</string>
    <string name="tag_task_manager">tskmgr</string>
    <string name="tag_backspace">backspace</string>
    <string name="tag_down">down</string>
    <string name="tag_up">up</string>
    <string name="tag_right">right</string>
    <string name="tag_left">left</string>
    <string name="tag_alt_f4">alt-f4</string>
    <string name="win_d">win-d</string>
    <string name="tag_alt_tab">alt-tab</string>
    <string name="tag_esc">esc</string>
    <string name="tag_tab">tab</string>
    <string name="tag_play_pause">plps</string>
    <!--    END KEYS-->
</resources>
